// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> renders correctly with default props 1`] = `
<img
  alt="alexander dummer 150646"
  className="img"
  data-sizes="100vw"
  data-src="https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
  data-srcset="
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=1 1x,
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=2 2x,
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=3 3x,
"
  src="https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
  title="alexander dummer 150646"
/>
`;

exports[`<Img /> renders correctly with given imgix picture source props 1`] = `
<picture
  className="picture"
>
  <source
    media="(max-width: 767px)"
    srcSet="https://policygenius-images.imgix.net/small?fit=max&auto=format&ch=Width,DPR&w={width}"
  />
  <source
    media="(max-width: 1024px)"
    srcSet="https://policygenius-images.imgix.net/medium?fit=max&auto=format&ch=Width,DPR&w={width}"
  />
  <img
    alt="default"
    className="img"
    data-sizes="auto"
    data-src="https://policygenius-images.imgix.net/default.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
    desktopImgixSrc="large"
    src="https://policygenius-images.imgix.net/default.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
    title="default"
  />
</picture>
`;

exports[`<Img /> renders correctly with given imgix props 1`] = `
<img
  alt="are cool"
  className="img cool-class"
  data-sizes="100vw"
  data-src="https://policygenius-images.imgix.net/photos/are-cool.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
  data-srcset="
  https://policygenius-images.imgix.net/photos/are-cool.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=1 1x,
  https://policygenius-images.imgix.net/photos/are-cool.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=2 2x,
  https://policygenius-images.imgix.net/photos/are-cool.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=3 3x,
"
  maxHeight="20"
  maxWidth="10"
  src="https://policygenius-images.imgix.net/photos/are-cool.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
  title="are cool"
/>
`;

exports[`<Img /> renders correctly with given regular picture source props 1`] = `
<picture
  className="picture"
>
  <source
    media="(max-width: 767px)"
    srcSet="small"
  />
  <source
    media="(max-width: 1024px)"
    srcSet="medium"
  />
  <img
    alt="Alternative"
    className="img"
    data-sizes="auto"
    data-src="default.jpg"
    desktopSrc="large"
    src="default.jpg"
    title="Alternative"
  />
</picture>
`;

exports[`<Img /> renders correctly with given regular props 1`] = `
<img
  alt="alt"
  className="img cool-class"
  data-sizes="100vw"
  data-src="some-url"
  data-srcset="some-url"
  maxHeight="20"
  maxWidth="10"
  src="some-url"
  title="title"
/>
`;

exports[`<Img /> renders with hide classes when null src props are provided 1`] = `
<picture
  className="picture hide-mobile-image hide-tablet-image"
>
  <img
    alt="default"
    className="img"
    data-sizes="auto"
    data-src="https://policygenius-images.imgix.net/default.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
    src="https://policygenius-images.imgix.net/default.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
    title="default"
  />
</picture>
`;
